--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,37 @@ jobs:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+  flyve_test_26:
+    working_directory: ~/flyve
+    docker:
+        - image: circleci/android:api-26-alpha
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - run:
+          name: Setup emulator
+          command: sdkmanager "system-images;android-26;default;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-26;default;armeabi-v7a"
+      - run:
+          name: Launch emulator
+          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
+          background: true
+      - run:
+          name: Wait emulator
+          command: |
+            # wait for it to have booted
+            circle-android wait-for-boot
+            # unlock the emulator screen
+            sleep 30
+            adb shell input keyevent 82
+      - run:
+          name: Run Tests
+          command: ./gradlew connectedAndroidTest
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
   flyve_test_22:
     working_directory: ~/flyve
     docker:
@@ -131,9 +162,6 @@ jobs:
             name: Create apk
             command: ./gradlew assemble
         - run:
-            name: Changelog
-            command: source ci/scripts/ci_changelog.sh
-        - run:
             name: Javadoc
             command: source ci/scripts/ci_javadoc.sh
         - run:
@@ -146,7 +174,7 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  build_test_and_deploy:
     jobs:
       - flyve_build
       - flyve_test_16:
@@ -159,7 +187,9 @@ workflows:
           requires:
             - flyve_test_16
             - flyve_test_22
+            - flyve_test_26
       - flyve_documentation:
           requires:
             - flyve_test_16
             - flyve_test_22
+            - flyve_test_26
